--- a/src/app/components/gallery/gallery.component.html
+++ b/src/app/components/gallery/gallery.component.html
@@ -6,11 +6,16 @@
     <div class="d-none d-lg-block mb-5">
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div *ngFor="let mold of molds" class="col">
-                <div class="card border-light text-white bg-dark h-100">
+                <div class="card text-white bg-dark h-100">
+                    <!-- border-light -->
                     <img [src]="mold.path" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">{{mold.name}}</h5>
-                        <p class="card-text" style="overflow-wrap: break-word; white-space: pre-wrap;">{{mold.description}}</p>
+                        <h5 class="card-title">
+                            {{getTranslate(mold.name)}}
+                        </h5>
+                        <p class="card-text text-muted" style="overflow-wrap: break-word; white-space: pre-wrap;">
+                            {{getTranslate(mold.description)}}
+                        </p>
                     </div>
                 </div>
             </div>
@@ -19,11 +24,23 @@
 
     <!-- SM -->
     <div class="d-lg-none">
-        <div class="row row-cols-1 row-cols-md-3">
+        <div class="row row-cols-1 row-cols-md-3 g-4">
             <div *ngFor="let mold of molds" class="col">
-                <div class="mb-3">
-                    <img [src]="mold.path" class="img-fluid" alt="...">
+                <div class="card tex-white bg-dark h-100">
+                    <!-- border-light -->
+                    <img [src]="mold.path" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            {{getTranslate(mold.name)}}
+                        </h5>
+                        <p class="card-text text-muted" style="overflow-wrap: break-word; white-space: pre-wrap;">
+                            {{getTranslate(mold.description)}}
+                        </p>
+                    </div>
                 </div>
+                <!-- <div class="mb-3">
+                    <img [src]="mold.path" class="img-fluid" alt="...">
+                </div> -->
             </div>
         </div>
     </div>
