--- a/src/app/components/our-services/our-services.component.css
+++ b/src/app/components/our-services/our-services.component.css
@@ -26,3 +26,9 @@
 .bg-custom {
   background-color: var(--app-background-color);
 }
+
+.featurette-heading{
+  color: white;
+  margin-top: 5rem;
+}
+
