--- a/src/app/components/account-info/account-info.component.html
+++ b/src/app/components/account-info/account-info.component.html
@@ -1,62 +1,60 @@
-<!-- <div class="container mt-5 mb-5 w-100">
-    <h1 class="display-4">Banka Hesap Bilgilerimiz</h1>
-    <hr class=""> -->
+<div class="container mt-5 mb-5 w-100">
+    <h1 class="display-4">{{getTranslate('ourAccountInfo')}}</h1>
+    <hr class="">
 
-<div class="table-responsive text-nowrap">
-    <table class="table table-dark table-striped table-bordered">
-        <thead>
-            <tr>
-                <th scope="col">Hesap Sahibi</th>
-                <th scope="col">Banka Adı</th>
-                <th scope="col">Şube</th>
-                <th scope="col">Döviz</th>
-                <th scope="col">Hesap Numarası</th>
-                <th scope="col">IBAN</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td rowspan="6" class="align-middle">Allent Plastik Kalıp <br> San. ve Tic. Ltd. Şti.</td>
-                <td rowspan="3" class="align-middle">Kuveyt Türk</td>
-                <td rowspan="3" class="align-middle">Büsan</td>
-                <td>TL</td>
-                <td>96299056-1</td>
-                <td>TR960020500009629905600001</td>
-            </tr>
-            <tr>
-                <td>USD</td>
-                <td>96299056-101</td>
-                <td>TR150020500009629905600101</td>
-            </tr>
-            <tr>
-                <td>EURO</td>
-                <td>96299056-103</td>
-                <td>TR580020500009629905600103</td>
-            </tr>
-            <tr>
-                <td rowspan="2" class="align-middle">Yapı Kredi</td>
-                <td>Büsan (1067)</td>
-                <td>TL</td>
-                <td>67117637</td>
-                <td>TR410006701000000067117637</td>
-            </tr>
-            <tr>
-                <td>Midyat (1036)</td>
-                <td>TL</td>
-                <td>67365678</td>
-                <td>TR080006701000000067365678</td>
-            </tr>
-            <tr>
-                <td>VakıfBank</td>
-                <td>Büsan</td>
-                <td>TL</td>
-                <td>---</td>
-                <td>TR920001500158007309574130</td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="table-responsive text-nowrap">
+        <table class="table table-dark table-striped table-bordered">
+            <thead>
+                <tr>
+                    <th scope="col">{{getTranslate('accountOwner')}}</th>
+                    <th scope="col">{{getTranslate('bankName')}}</th>
+                    <th scope="col">{{getTranslate('branch')}}</th>
+                    <th scope="col">{{getTranslate('foreignCurrency')}}</th>
+                    <th scope="col">{{getTranslate('accountNumber')}}</th>
+                    <th scope="col">{{getTranslate('iban')}}</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td rowspan="6" class="align-middle">Allent Plastik Kalıp <br> San. ve Tic. Ltd. Şti.</td>
+                    <td rowspan="3" class="align-middle">Kuveyt Türk</td>
+                    <td rowspan="3" class="align-middle">Büsan</td>
+                    <td>TL</td>
+                    <td>96299056-1</td>
+                    <td>TR960020500009629905600001</td>
+                </tr>
+                <tr>
+                    <td>USD</td>
+                    <td>96299056-101</td>
+                    <td>TR150020500009629905600101</td>
+                </tr>
+                <tr>
+                    <td>EURO</td>
+                    <td>96299056-103</td>
+                    <td>TR580020500009629905600103</td>
+                </tr>
+                <tr>
+                    <td rowspan="2" class="align-middle">Yapı Kredi</td>
+                    <td>Büsan (1067)</td>
+                    <td>TL</td>
+                    <td>67117637</td>
+                    <td>TR410006701000000067117637</td>
+                </tr>
+                <tr>
+                    <td>Midyat (1036)</td>
+                    <td>TL</td>
+                    <td>67365678</td>
+                    <td>TR080006701000000067365678</td>
+                </tr>
+                <tr>
+                    <td>VakıfBank</td>
+                    <td>Büsan</td>
+                    <td>TL</td>
+                    <td>---</td>
+                    <td>TR920001500158007309574130</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
 </div>
-
-<!-- </div> -->
-
-<!--  -->
