--- a/src/app/components/corporate-info/corporate-info.component.html
+++ b/src/app/components/corporate-info/corporate-info.component.html
@@ -1,40 +1,23 @@
-<div class="container mt-5 mb-5 w-100">
-    <h1 class="display-4">{{getTranslate('contact')}}</h1>
+<div class="container mt-5 w-100">
+    <h1 class="display-4">{{getTranslate('ourInvoiceInformation')}}</h1>
     <hr class="">
-
-    <div class="row align-items-center mb-5" id="services">
-        <div class="col-lg-6 order-2 order-lg-1"><i class="fa fa-bar-chart fa-2x mb-3 text-primary"></i>
-            <h2 class="font-weight-light">{{getTranslate('ourServices')}}</h2>
-            <p class="font-italic text-muted">
-                {{getTranslate('aboutUsOurServices')}}
-            </p>
-            <ul class="list-group list-group-flush mb-4">
-                <li class="list-group-item ">
-                    <p class="font-italic text-muted">
-                        {{getTranslate('aboutUsOurServices/l1')}}
-                    </p>
-                </li>
-                <li class="list-group-item">
-                    <p class="font-italic text-muted">
-                        {{getTranslate('aboutUsOurServices/l2')}}
-                    </p>
-                </li>
-                <li class="list-group-item">
-                    <p class="font-italic text-muted">
-                        {{getTranslate('aboutUsOurServices/l3')}}
-                    </p>
-                </li>
-                <li class="list-group-item">
-                    <p class="font-italic text-muted">
-                        {{getTranslate('aboutUsOurServices/l4')}}...
-                    </p>
-                </li>
-            </ul>
-        </div>
-        <div class="col-lg-5 px-5 mx-auto order-1 order-lg-2"><img src="assets/images/img-1.jpg" alt=""
-                class="img-fluid mb-4 mb-lg-0">
-        </div>
-    </div>
 </div>
 
-<!--  -->
+<div class="bg-custom py-3">
+    <div class="container">
+        <div class="row align-items-center mb-5">
+            <div class="col-lg-6 order-2 order-lg-1">
+                <p class="font-italic text-muted" style="overflow-wrap: break-word; white-space: pre-wrap;">
+                    ALLENT Plastik Kalıp Sanayi ve Ticaret Ltd. Şti.
+                </p>
+                <p class="font-italic text-muted" style="overflow-wrap: break-word; white-space: pre-wrap;">
+                    {{getTranslate('addressFromDb')}}
+                </p>
+                <p class="font-italic text-muted" style="overflow-wrap: break-word; white-space: pre-wrap;">
+                    Selçuk {{getTranslate('taxAdministration')}} - 0551522747
+                </p>
+            </div>
+        </div>
+    </div>
+
+</div>
