--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -21,8 +21,8 @@
 
                                 <div class="container">
                                     <div class="carousel-caption text-start" style="bottom: initial; top: 40%;">
-                                        <h1 style="white-space: pre-line;">
-                                            {{slide.title}}
+                                        <h1 style="white-space: pre-line; max-width: 550px;">
+                                            {{getTranslate(slide.title)}}
                                         </h1>
                                         <!-- <p>
                                             {{slide.description}}
@@ -55,25 +55,23 @@
             <div class="col-md-7">
                 <h2 class="featurette-heading" id="0">
                     {{getTranslate('homePageP1Lead')}}
-                    <span class="text-muted">{{getTranslate('homePageP1LeadTextMuted')}}.</span>
                 </h2>
-                <p class="lead">{{getTranslate('homePageP1')}}
+                <p class="lead text-muted">{{getTranslate('homePageP1')}}
                 </p>
-                <ol class="list-group list-group-flush">
-                    <li class="list-group-item">
+                <ul>
+                    <li>
                         <p class="lead">{{getTranslate('homePageP1/l1')}}</p>
                     </li>
-                    <li class="list-group-item">
+                    <li>
                         <p class="lead">{{getTranslate('homePageP1/l2')}}</p>
                     </li>
-                    <li class="list-group-item">
+                    <li>
                         <p class="lead">{{getTranslate('homePageP1/l3')}}...</p>
                     </li>
-                </ol>
+                </ul>
             </div>
             <div class="col-md-5">
-                <!-- <img src="assets/images/modern-flat-design-1.png" alt="" width="500" height="500" class="img-fluid"> -->
-                <img src="assets/images/white-desk.png" alt="" width="500" height="500" class="img-fluid">
+                <img src="assets/images/home-page-p1.jpeg" alt="" width="500" height="500" class="img-fluid">
             </div>
         </div>
 
@@ -81,45 +79,48 @@
 
         <div class="row featurette" id="1">
             <div class="col-md-7 order-md-2">
-                <h2 class="featurette-heading" id="1">
+                <h2 class="featurette-heading-2" id="1">
                     {{getTranslate('homePageP2Lead')}}
                     <!-- <span class="text-muted">See for yourself.</span> -->
                 </h2>
-                <p class="lead">{{getTranslate('homePageP2')}}
+                <p class="lead  text-muted">{{getTranslate('homePageP2')}}
                 </p>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">
+                <ul>
+                    <li>
                         <p class="lead">{{getTranslate('homePageP2/l1')}}</p>
                     </li>
-                    <li class="list-group-item">
+                    <li>
                         <p class="lead">{{getTranslate('homePageP2/l2')}}</p>
                     </li>
-                    <li class="list-group-item">
+                    <li>
                         <p class="lead">{{getTranslate('homePageP2/l3')}}</p>
                     </li>
-                    <li class="list-group-item">
-                        <p class="lead">{{getTranslate('homePageP2/l4')}}</p>
-                    </li>
+                    <!-- <li>
+                        <p class="lead">{{getTranslate('homePageP2/l4')}}...</p>
+                    </li> -->
                 </ul>
             </div>
             <div class="col-md-5 order-md-1">
-                <img src="assets/images/modern-flat-design-2.png" alt="" width="500" height="500" class="img-fluid">
+                <img src="assets/images/home-page-p2.jpeg" alt="" width="500" height="500" class="img-fluid">
             </div>
         </div>
 
         <hr class="featurette-divider">
 
-        <div class="row featurette" id="2">
+        <div class="row featurette mb-5" id="2">
             <div class="col-md-7">
-                <h2 class="featurette-heading" id="2">{{getTranslate('homePageP3Lead')}},
-                    <span class="text-muted">{{getTranslate('homePageP3LeadTextMuted')}}.</span>
+                <h2 class="featurette-heading" id="2">{{getTranslate('homePageP3Lead')}}
+                    <!-- <span class="text-muted">{{getTranslate('homePageP3LeadTextMuted')}}.</span> -->
                 </h2>
-                <p class="lead">
+                <p class="lead  text-muted">
                     {{getTranslate('homePageP3')}}
+                </p>
+                <p class="lead text-muted">
+                    {{getTranslate('youImagineIt')}}
                 </p>
             </div>
             <div class="col-md-5">
-                <img src="assets/images/modern-flat-design-3.png" alt="" width="500" height="500" class="img-fluid">
+                <img src="assets/images/home-page-p3.jpeg" alt="" width="500" height="500" class="img-fluid">
             </div>
         </div>
 
@@ -153,12 +154,14 @@
                                 [ngClass]="(i === 0) ? 'active' : ''" data-bs-interval="5000">
                                 <img [src]="slide.path" class="carousel-img w-100 h-100" alt="...">
 
-                                <div class="container">
-                                    <div class="carousel-caption text-center" style="bottom: auto; top: 0%;">
-                                        <h1>{{slide.title}}</h1>
-                                        <!-- <p class="font-italic">
-                                            {{slide.description}}
-                                        </p> -->
+                                <div class="container d-none d-md-block d-lg-none">
+                                    <div class="carousel-caption text-center" style="bottom: auto; top: 130px;">
+                                        <h1>{{getTranslate(slide.title)}}</h1>
+                                    </div>
+                                </div>
+                                <div class="container d-md-none">
+                                    <div class="carousel-caption text-center" style="bottom: auto; top: 30px;">
+                                        <h1>{{getTranslate(slide.title)}}</h1>
                                     </div>
                                 </div>
                             </div>
@@ -188,57 +191,53 @@
     <div class="container marketing mt-5" data-bs-spy="scroll" data-bs-target="#myCarousel" data-bs-offset="0"
         tabindex="0">
         <div class="row featurette" style="margin-top: 5%;">
-            <div class="col-md-5">
-                <img src="assets/images/modern-flat-design-1.png" alt="" width="500" height="500"
-                    class="img-fluid img-sm">
+            <div class="col-lg-5">
+                <img src="assets/images/home-page-p1.jpeg" alt="" width="500" height="500" class="img-fluid img-sm">
             </div>
-            <div class="col-md-7">
+            <div class="col-lg-7">
                 <h2 class="featurette-heading" id="0">
                     {{getTranslate('homePageP1Lead')}}
-                    <span class="text-muted">{{getTranslate('homePageP1LeadTextMuted')}}.</span>
                 </h2>
-                <p class="lead">{{getTranslate('homePageP1')}}
+                <p class="lead text-muted">{{getTranslate('homePageP1')}}
                 </p>
-                <ol class="list-group list-group-flush">
-                    <li class="list-group-item">
+                <ul>
+                    <li>
                         <p class="lead">{{getTranslate('homePageP1/l1')}}</p>
                     </li>
-                    <li class="list-group-item">
+                    <li>
                         <p class="lead">{{getTranslate('homePageP1/l2')}}</p>
                     </li>
-                    <li class="list-group-item">
+                    <li>
                         <p class="lead">{{getTranslate('homePageP1/l3')}}...</p>
                     </li>
-                </ol>
+                </ul>
             </div>
         </div>
 
         <hr class="featurette-divider">
 
         <div class="row featurette" id="1">
-            <div class="col-md-5 order-md-1">
-                <img src="assets/images/modern-flat-design-2.png" alt="" width="500" height="500"
-                    class="img-fluid img-sm">
+            <div class="col-lg-5 order-md-1">
+                <img src="assets/images/home-page-p2.jpeg" alt="" width="500" height="500" class="img-fluid img-sm">
             </div>
-            <div class="col-md-7 order-md-2">
-                <h2 class="featurette-heading" id="1">
+            <div class="col-lg-7 order-md-2">
+                <h2 class="featurette-heading-2" id="1">
                     {{getTranslate('homePageP2Lead')}}
-                    <!-- <span class="text-muted">See for yourself.</span> -->
                 </h2>
-                <p class="lead">
+                <p class="lead text-muted">
                     {{getTranslate('homePageP2')}}
                 </p>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">
+                <ul>
+                    <li>
                         <p class="lead">{{getTranslate('homePageP2/l1')}}</p>
                     </li>
-                    <li class="list-group-item">
+                    <li>
                         <p class="lead">{{getTranslate('homePageP2/l2')}}</p>
                     </li>
-                    <li class="list-group-item">
+                    <li>
                         <p class="lead">{{getTranslate('homePageP2/l3')}}</p>
                     </li>
-                    <li class="list-group-item">
+                    <li>
                         <p class="lead">{{getTranslate('homePageP2/l4')}}...</p>
                     </li>
                 </ul>
@@ -248,15 +247,13 @@
         <hr class="featurette-divider">
 
         <div class="row featurette" id="2">
-            <div class="col-md-5">
-                <img src="assets/images/modern-flat-design-3.png" alt="" width="500" height="500"
-                    class="img-fluid img-sm">
+            <div class="col-lg-5">
+                <img src="assets/images/home-page-p3.jpeg" alt="" width="500" height="500" class="img-fluid img-sm">
             </div>
-            <div class="col-md-7">
-                <h2 class="featurette-heading" id="2">{{getTranslate('homePageP3Lead')}},
-                    <span class="text-muted">{{getTranslate('homePageP3LeadTextMuted')}}.</span>
+            <div class="col-lg-7">
+                <h2 class="featurette-heading" id="2">{{getTranslate('homePageP3Lead')}}
                 </h2>
-                <p class="lead">
+                <p class="lead text-muted">
                     {{getTranslate('homePageP3')}}
                 </p>
             </div>
