--- a/src/app/components/our-services/our-services.component.html
+++ b/src/app/components/our-services/our-services.component.html
@@ -22,14 +22,16 @@
     <div class="container py-5">
         <div class="row h-100 align-items-center py-5">
             <div class="col-lg-6">
-                <h1 class="display-4">{{getTranslate('ourServices')}}</h1>
+                <h1 class="display-4">
+                    {{getTranslate('ourServices')}}
+                </h1>
                 <p class="lead text-muted mb-0">
                     {{getTranslate('aboutUsPFromDb')}}
                 </p>
             </div>
-            <div class="col-lg-6 d-none d-lg-block">
+            <!-- <div class="col-lg-6 d-none d-lg-block">
                 <img src="assets/images/illus.png" alt="" class="img-fluid">
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
@@ -40,35 +42,32 @@
         <!-- Plastic İnjection Molding -->
         <div class="row align-items-center mb-5" id="plastic-injection-molding">
             <div class="col-lg-6 order-2 order-lg-1">
-                <i class="fa fa-bar-chart fa-2x mb-3 text-primary"></i>
-                <h2 class="font-weight-light">{{getTranslate('plasticInjectionMolding')}}</h2>
+                <!-- <i class="fa fa-bar-chart fa-2x mb-3 text-primary"></i> -->
+                <h2 class="font-weight-light featurette-heading">
+                    {{getTranslate('plasticInjectionMolding')}}
+                </h2>
                 <p class="font-italic text-muted">
-                    {{getTranslate('industrialProductDevelopment')}}
+                    {{getTranslate('homePageP1')}}
                 </p>
-                <ul class="list-group list-group-flush mb-4">
-                    <li class="list-group-item ">
+                <ul>
+                    <li>
                         <p class="font-italic text-muted">
-                            {{getTranslate('aboutUsOurServices/l1')}}
+                            {{getTranslate('homePageP1/l1')}}
                         </p>
                     </li>
-                    <li class="list-group-item">
+                    <li>
                         <p class="font-italic text-muted">
-                            {{getTranslate('aboutUsOurServices/l2')}}
+                            {{getTranslate('homePageP1/l2')}}
                         </p>
                     </li>
-                    <li class="list-group-item">
+                    <li>
                         <p class="font-italic text-muted">
-                            {{getTranslate('aboutUsOurServices/l3')}}
-                        </p>
-                    </li>
-                    <li class="list-group-item">
-                        <p class="font-italic text-muted">
-                            {{getTranslate('aboutUsOurServices/l4')}}...
+                            {{getTranslate('homePageP1/l3')}}...
                         </p>
                     </li>
                 </ul>
             </div>
-            <div class="col-lg-5 px-5 mx-auto order-1 order-lg-2"><img src="assets/images/img-1.jpg" alt=""
+            <div class="col-lg-5 px-5 mx-auto order-1 order-lg-2"><img src="assets/images/home-page-p1.jpeg" alt=""
                     class="img-fluid mb-4 mb-lg-0">
             </div>
         </div>
@@ -76,53 +75,49 @@
         <!-- Industrial Product Development -->
         <div class="row align-items-center mb-5" id="industrial-product-development">
             <div class="col-lg-5 px-5 mx-auto">
-                <img src="assets/images/img-2.jpg" alt="" class="img-fluid mb-4 mb-lg-0">
+                <img src="assets/images/home-page-p2.jpeg" alt="" class="img-fluid mb-4 mb-lg-0">
             </div>
             <div class="col-lg-6">
-                <i class="fa fa-leaf fa-2x mb-3 text-primary"></i>
-                <h2 class="font-weight-light">{{getTranslate('industrialProductDevelopment')}}</h2>
-                <p class="font-italic text-muted mb-4">
-                    {{getTranslate('aboutUsVisionAndMissionP1')}}
+                <h2 class="font-weight-light featurette-heading">
+                    {{getTranslate('industrialProductDevelopment')}}
+                </h2>
+                <p class="font-italic text-muted">
+                    {{getTranslate('homePageP2')}}
                 </p>
-                <p class="font-italic text-muted mb-4">
-                    {{getTranslate('aboutUsVisionAndMissionP2')}}
-
-                </p>
+                <ul>
+                    <li>
+                        <p class="font-italic text-muted">
+                            {{getTranslate('homePageP2/l1')}}
+                        </p>
+                    </li>
+                    <li>
+                        <p class="font-italic text-muted">
+                            {{getTranslate('homePageP2/l2')}}
+                        </p>
+                    </li>
+                    <li>
+                        <p class="font-italic text-muted">
+                            {{getTranslate('homePageP2/l3')}}
+                        </p>
+                    </li>
+                    <li>
+                        <p class="font-italic text-muted">
+                            {{getTranslate('homePageP2/l4')}}...
+                        </p>
+                    </li>
+                </ul>
             </div>
         </div>
 
         <!-- Manufacture of Plastic Products -->
         <div class="row align-items-center" id="manufacture-of-plastic-products">
             <div class="col-lg-6 order-2 order-lg-1">
-                <i class="fa fa-bar-chart fa-2x mb-3 text-primary"></i>
-                <h2 class="font-weight-light">{{getTranslate('manufactureOfPlasticProducts')}}</h2>
+                <h2 class="font-weight-light featurette-heading">{{getTranslate('manufactureOfPlasticProducts')}}</h2>
                 <p class="font-italic text-muted">
-                    {{getTranslate('industrialProductDevelopment')}}
+                    {{getTranslate('homePageP3')}}
                 </p>
-                <ul class="list-group list-group-flush mb-4">
-                    <li class="list-group-item ">
-                        <p class="font-italic text-muted">
-                            {{getTranslate('aboutUsOurServices/l1')}}
-                        </p>
-                    </li>
-                    <li class="list-group-item">
-                        <p class="font-italic text-muted">
-                            {{getTranslate('aboutUsOurServices/l2')}}
-                        </p>
-                    </li>
-                    <li class="list-group-item">
-                        <p class="font-italic text-muted">
-                            {{getTranslate('aboutUsOurServices/l3')}}
-                        </p>
-                    </li>
-                    <li class="list-group-item">
-                        <p class="font-italic text-muted">
-                            {{getTranslate('aboutUsOurServices/l4')}}...
-                        </p>
-                    </li>
-                </ul>
             </div>
-            <div class="col-lg-5 px-5 mx-auto order-1 order-lg-2"><img src="assets/images/img-1.jpg" alt=""
+            <div class="col-lg-5 px-5 mx-auto order-1 order-lg-2"><img src="assets/images/home-page-p3.jpeg" alt=""
                     class="img-fluid mb-4 mb-lg-0">
             </div>
         </div>
