--- a/src/app/components/references/references.component.html
+++ b/src/app/components/references/references.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5 mb-5 w-100 ">
+<div class="container mt-5 mb-5 ">
     <h1 class="display-4">{{getTranslate('references')}}</h1>
     <hr class="">
 
@@ -6,35 +6,35 @@
     <div class="d-none d-lg-block">
         <div class="row row-cols-md-4 g-5 mt-2">
             <div class="col-12 d-flex justify-content-center align-items-center">
-                <img src="assets/images/sekeroglu-logo.png" class="img w-100" alt="...">
+                <img src="assets/images/sekeroglu-logo.png" width="300" height="300" class="img img-fluid" alt="...">
             </div>
 
             <div class="col-12 d-flex justify-content-center align-items-center">
-                <img src="assets/images/aytokfiltre.png" class="img w-100" alt="...">
+                <img src="assets/images/aytokfiltre.png" width="300" height="300" class="img img-fluid" alt="...">
             </div>
 
             <div class="col-12 d-flex justify-content-center align-items-center">
-                <img src="assets/images/mesa-logo.jpeg" class="img w-100" alt="...">
+                <img src="assets/images/mesa-logo.jpeg" width="300" height="300" class="img img-fluid" alt="...">
             </div>
             
             <div class="col-12 d-flex justify-content-center align-items-center">
-                <img src="assets/images/freysas-logo.jpg" class="img w-100" alt="...">
+                <img src="assets/images/freysas-logo.jpg" width="300" height="300" class="img img-fluid" alt="...">
             </div>
 
             <div class="col-12 d-flex justify-content-center align-items-center">
-                <img src="assets/images/onur-plas-logo.png" class="img w-100" alt="...">
+                <img src="assets/images/onur-plas-logo.png" width="300" height="300" class="img img-fluid" alt="...">
             </div>
             
             <div class="col-12 d-flex justify-content-center align-items-center">
-                <img src="assets/images/hidromet.png" class="img w-100" alt="...">
+                <img src="assets/images/hidromet.png" width="300" height="300" class="img img-fluid" alt="...">
             </div>
 
             <div class="col-12 d-flex justify-content-center align-items-center">
-                <img src="assets/images/pivvana-logo.jpeg" class="img w-100" alt="...">
+                <img src="assets/images/pivvana-logo.jpeg" width="300" height="300" class="img img-fluid" alt="...">
             </div>
 
             <div class="col-12 d-flex justify-content-center align-items-center">
-                <img src="assets/images/ems-logo.png" class="img w-100" alt="...">
+                <img src="assets/images/ems-logo.png" width="300" height="300" class="img img-fluid" alt="...">
             </div>
 
             
@@ -46,35 +46,35 @@
     <div class="d-lg-none">
         <div class="row row-cols-sm-1 g-4 text-center mb-5">
             <div class="col-6 d-flex justify-content-center align-items-center">
-                <img src="assets/images/sekeroglu-logo.png" class="img-sm w-100" alt="...">
+                <img src="assets/images/sekeroglu-logo.png" class="img-sm" alt="...">
             </div>
 
             <div class="col-6 d-flex justify-content-center align-items-center">
-                <img src="assets/images/aytokfiltre.png" class="img-sm w-100" alt="...">
+                <img src="assets/images/aytokfiltre.png" class="img-sm" alt="...">
             </div>
 
             <div class="col-6 d-flex justify-content-center align-items-center">
-                <img src="assets/images/mesa-logo.jpeg" class="img-sm w-100" alt="...">
+                <img src="assets/images/mesa-logo.jpeg" class="img-sm" alt="...">
             </div>
             
             <div class="col-6 d-flex justify-content-center align-items-center">
-                <img src="assets/images/freysas-logo.jpg" class="img-sm w-100" alt="...">
+                <img src="assets/images/freysas-logo.jpg" class="img-sm" alt="...">
             </div>
 
             <div class="col-6 d-flex justify-content-center align-items-center">
-                <img src="assets/images/onur-plas-logo.png" class="img-sm w-100" alt="...">
+                <img src="assets/images/onur-plas-logo.png" class="img-sm" alt="...">
             </div>
             
             <div class="col-6 d-flex justify-content-center align-items-center">
-                <img src="assets/images/hidromet.png" class="img-sm w-100" alt="...">
+                <img src="assets/images/hidromet.png" class="img-sm" alt="...">
             </div>
 
             <div class="col-6 d-flex justify-content-center align-items-center">
-                <img src="assets/images/pivvana-logo.jpeg" class="img-sm w-100" alt="...">
+                <img src="assets/images/pivvana-logo.jpeg" class="img-sm" alt="...">
             </div>
 
             <div class="col-6 d-flex justify-content-center align-items-center">
-                <img src="assets/images/ems-logo.png" class="img-sm w-100" alt="...">
+                <img src="assets/images/ems-logo.png" class="img-sm" alt="...">
             </div>
             
         </div>
