--- a/src/app/components/gallery/gallery.component.html
+++ b/src/app/components/gallery/gallery.component.html
@@ -23,7 +23,7 @@
     </div>
 
     <!-- SM -->
-    <div class="d-lg-none">
+    <div class="d-lg-none mb-5">
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div *ngFor="let mold of molds" class="col">
                 <div class="card tex-white bg-dark h-100">
